<resources>
    <string name="app_name">iCommunicate</string>
    <string name="pop_up_icomm">iCommunicate World</string>





    <string name="icommunicate_world">iCommunicate.World</string>
    <string name="freedom_to_connect">Freedom To Connect</string>
    <!--menu-->
    <string name="menu_contact">Contacts</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_keypad">Keypad</string>
    <string name="menu_message">Message</string>
    <string name="menu_more">More</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="txt_sing_in">Sign In</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>
    <string name="network_not_available">Please check your internet connection</string>

    <string name="blank_email">Please enter email address.</string>
    <string name="valid_email">Please enter valid email address.</string>
    <string name="blank_password">Please enter password.</string>
    <string name="txt_forgot_pass">Submit</string>
    <string name="txt_logout">Are you sure want to logout from the application?</string>
    <string name="txt_share_contact">Share card</string>

    <array name="contact_tab_array">
        <item>Contacts</item>
        <item>Favorites</item>
    </array>

    <array name="recent_tab_array">
        <item>All</item>
        <item>Missed</item>
    </array>
    <!--    <string name="allow_communicaton">Allow iCommunicate\n - To make and receive calls\n - To access your contact list\n - To access photos, media and files on your device\n - To record audio</string>-->
    <!--    <string name="allow_communicaton">\n\u2022 He has been Chairman of CFL Manufacturers Committee of ELCOMA, the All India Association of Lighting Equipment Manufacturers.-->
    <!--\n\u2022 He has been the President of Federation of Industries of India (FII).</string>-->

    <string name="allow_communicaton">
    <ul>
        <b>iCommunicate. World would like to-</b>\n\n
        <b>- Access Your Contacts. \n </b>
          This will allow you to easily call and message people you have in your contacts. \n
        <b>- Notification.\n</b>
          Notification may include alerts,sound and icon badges.\n
          These can be configure in Setting.
    </ul>
</string>
    <string name="website_link">http://www.iCommunicate.com</string>
    <string name="enter_old_pwd">Enter Your Old Password</string>
    <string name="enter_new_pwd">Enter New Password</string>
    <string name="enter_confirm">Enter Confirm Password</string>
    <string name="VALEDATE_OLD_PASSWORD">Please enter old password.</string>
    <string name="VALEDATE_NEW_PASSWORD">Please enter new password.</string>
    <string name="VALEDATE_PASSWORD_NOT_SAME">Your new password can not be same as login password.</string>
    <string name="VALEDATE_PASSWORD_OLD_NEW_NOT_MATCH">Old password and new password can not be same.</string>
    <string name="VALEDATE_CONFORM_PASSWORD">Please enter confirm password.</string>
    <string name="VALEDATE_PASSWORD_NOT_MATCH">Your confirm password is not match.</string>


    <string-array name="DialingCountryCode">
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
</resources>
