<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_email_address"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:singleLine="true"
                android:text="test1@gmail.com"
                android:textColor="@color/app_blue"
                android:textColorHint="#30170846" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_password"
                android:text="123"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/app_blue"
                android:textColorHint="#30170846" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rectangle_solid"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/txt_sing_in"
            android:textAllCaps="true"
            android:textColor="@color/app_orange"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:text="@string/txt_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/app_orange"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>


</FrameLayout>