<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/custom_action_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/change_pw_old"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_old_pwd"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/app_blue"
                android:textColorHint="#30170846" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/change_pw_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_new_pwd"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/app_blue"
                android:textColorHint="#30170846" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/change_pw_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/enter_confirm"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/app_blue"
                android:textColorHint="#30170846" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_submit"
                style="@style/dialog_blue_button"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Change Password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp" />



        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
